package es.uniovi.dlp.ast.statements;

public interface Statement {
}
